force-app/main/default/objects/JSON_Web_Token__mdt/fields/Algorithm__c.field-meta.xml
<CustomField>
    <fullName>Algorithm__c</fullName>
    <label>Algorithm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>