force-app/main/default/objects/JSON_Web_Token__mdt/fields/Audiences__c.field-meta.xml
<CustomField>
    <fullName>Audiences__c</fullName>
    <label>Audiences</label>
    <length>255</length>
    <type>Text</type>
</CustomField>