force-app/main/default/objects/JSON_Web_Token__mdt/fields/Subscriber__c.field-meta.xml
<CustomField>
    <fullName>Subscriber__c</fullName>
    <label>Subscriber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>