force-app/main/default/objects/JSON_Web_Token__mdt/fields/Token_Duration__c.field-meta.xml
<CustomField>
    <fullName>Token_Duration__c</fullName>
    <label>Token Duration</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>